--- a/channeld/test/Makefile
+++ b/channeld/test/Makefile
@@ -7,7 +7,13 @@ CHANNELD_TEST_PROGRAMS := $(CHANNELD_TEST_OBJS:.o=)
 ALL_C_SOURCES += $(CHANNELD_TEST_SRC)
 ALL_TEST_PROGRAMS += $(CHANNELD_TEST_PROGRAMS)
 
-CHANNELD_TEST_COMMON_OBJS :=			\
+# run-full_channel.o needs a special version of some common files!
+$(filter-out channeld/test/run-full_channel,$(CHANNELD_TEST_PROGRAMS)): libcommon.a
+
+channeld/test/run-full_channel:			\
+	$(BITCOIN_OBJS)				\
+	wire/towire.o				\
+	wire/fromwire.o				\
 	common/amount.o				\
 	common/autodata.o			\
 	common/channel_type.o			\
@@ -24,8 +30,6 @@ CHANNELD_TEST_COMMON_OBJS :=			\
 	common/setup.o				\
 	common/utils.o
 
-$(CHANNELD_TEST_PROGRAMS): $(BITCOIN_OBJS) $(WIRE_OBJS) $(CHANNELD_TEST_COMMON_OBJS)
-
-$(CHANNELD_TEST_OBJS): $(CHANNELD_HEADERS) $(CHANNELD_SRC)
+$(CHANNELD_TEST_OBJS): $(CHANNELD_HEADERS) $(CHANNELD_SRC) channeld/test/Makefile
 
 check-units: $(CHANNELD_TEST_PROGRAMS:%=unittest/%)
