--- a/onchaind/Makefile
+++ b/onchaind/Makefile
@@ -29,43 +29,6 @@ LIGHTNINGD_CONTROL_OBJS += \
 	onchaind/onchaind_wiregen.o \
 	onchaind/onchaind_wire.o
 
-# Common source we use.
-ONCHAIND_COMMON_OBJS :=				\
-	common/amount.o				\
-	common/autodata.o			\
-	common/base32.o				\
-	common/bigsize.o			\
-	common/bip32.o				\
-	common/coin_mvt.o			\
-	common/channel_id.o			\
-	common/daemon.o				\
-	common/daemon_conn.o			\
-	common/derive_basepoints.o		\
-	common/status_wiregen.o			\
-	common/htlc_tx.o			\
-	common/htlc_wire.o			\
-	common/initial_commit_tx.o		\
-	common/keyset.o				\
-	common/key_derive.o			\
-	common/memleak.o			\
-	common/msg_queue.o			\
-	common/node_id.o			\
-	common/onionreply.o			\
-	common/peer_billboard.o			\
-	common/permute_tx.o			\
-	common/psbt_keypath.o			\
-	common/psbt_open.o			\
-	common/pseudorand.o			\
-	common/setup.o				\
-	common/status.o				\
-	common/status_wire.o			\
-	common/subdaemon.o			\
-	common/utils.o				\
-	common/utxo.o				\
-	common/version.o			\
-	common/wallet.o				\
-	common/wireaddr.o
-
-lightningd/lightning_onchaind: $(ONCHAIND_OBJS) $(WIRE_ONION_OBJS) $(ONCHAIND_COMMON_OBJS) $(WIRE_OBJS) $(BITCOIN_OBJS) $(HSMD_CLIENT_OBJS)
+lightningd/lightning_onchaind: $(ONCHAIND_OBJS) $(HSMD_CLIENT_OBJS) libcommon.a
 
 include onchaind/test/Makefile
