--- a/plugins/test/Makefile
+++ b/plugins/test/Makefile
@@ -1,4 +1,4 @@
-# Note that these actually #include everything they need, except ccan/ and bitcoin/.
+# Note that these actually #include everything they need, except ccan/, bitcoin/ and wire/
 # That allows for unit testing of statics, and special effects.
 PLUGIN_TEST_SRC := $(wildcard plugins/test/run-*.c)
 PLUGIN_TEST_OBJS := $(PLUGIN_TEST_SRC:.c=.o)
@@ -7,19 +7,7 @@ PLUGIN_TEST_PROGRAMS := $(PLUGIN_TEST_OBJS:.o=)
 ALL_C_SOURCES += $(PLUGIN_TEST_SRC)
 ALL_TEST_PROGRAMS += $(PLUGIN_TEST_PROGRAMS)
 
-PLUGIN_TEST_COMMON_OBJS :=			\
-	common/amount.o				\
-	common/autodata.o			\
-	common/pseudorand.o			\
-	common/setup.o				\
-	common/utils.o
-
 plugins/test/run-route-overlong:		\
-	common/dijkstra.o			\
-	common/fp16.o				\
-	common/gossmap.o			\
-	common/node_id.o			\
-	common/route.o				\
         gossipd/gossip_store_wiregen.o		\
 	plugins/channel_hint.o
 
@@ -31,8 +19,8 @@ plugins/test/run-route-calc:			\
 	gossipd/gossip_store_wiregen.o		\
 	plugins/channel_hint.o
 
-$(PLUGIN_TEST_PROGRAMS): $(BITCOIN_OBJS) $(WIRE_OBJS) $(PLUGIN_TEST_COMMON_OBJS)
+$(PLUGIN_TEST_PROGRAMS): libcommon.a
 
-$(PLUGIN_TEST_OBJS): $(PLUGIN_FUNDER_HEADER) $(PLUGIN_FUNDER_SRC)
+$(PLUGIN_TEST_OBJS): $(PLUGIN_ALL_HEADER) $(PLUGIN_ALL_SRC) plugins/test/Makefile
 
 check-units: $(PLUGIN_TEST_PROGRAMS:%=unittest/%)
