--- a/onchaind/test/Makefile
+++ b/onchaind/test/Makefile
@@ -9,7 +9,13 @@ ONCHAIND_TEST_PROGRAMS := $(ONCHAIND_TEST_OBJS:.o=)
 ALL_C_SOURCES += $(ONCHAIND_TEST_SRC)
 ALL_TEST_PROGRAMS += $(ONCHAIND_TEST_PROGRAMS)
 
-ONCHAIND_TEST_COMMON_OBJS :=			\
+# test/run-grind_feerate-bug uses its own htlc_timeout_tx()
+$(filter-out onchaind/test/run-grind_feerate-bug,$(ONCHAIND_TEST_PROGRAMS)): libcommon.a
+
+onchaind/test/run-grind_feerate-bug:		\
+	$(BITCOIN_OBJS)				\
+	wire/towire.o				\
+	wire/fromwire.o				\
 	common/amount.o				\
 	common/autodata.o			\
 	common/features.o			\
@@ -18,25 +24,8 @@ ONCHAIND_TEST_COMMON_OBJS :=			\
 	common/setup.o				\
 	common/utils.o
 
-$(ONCHAIND_TEST_PROGRAMS): $(ONCHAIND_TEST_COMMON_OBJS) $(BITCOIN_OBJS)
-
-# This needs many more objs:
-onchaind/test/run-onchainstress:		\
-	common/htlc_tx.o			\
-	common/derive_basepoints.o		\
-	common/daemon.o				\
-	common/htlc_wire.o			\
-	common/initial_commit_tx.o		\
-	common/key_derive.o			\
-	common/keyset.o				\
-	common/permute_tx.o			\
-	common/subdaemon.o			\
-	common/wallet.o				\
-	wire/towire.o				\
-	wire/fromwire.o
-
 # Test objects depend on ../ src and headers.
-$(ONCHAIND_TEST_OBJS): $(ONCHAIND_HEADERS) $(ONCHAIND_SRC)
+$(ONCHAIND_TEST_OBJS): $(ONCHAIND_HEADERS) $(ONCHAIND_SRC) onchaind/test/Makefile
 
 onchaind-tests: $(ONCHAIND_TEST_PROGRAMS:%=unittest/%)
 
