--- a/plugins/askrene/test/Makefile
+++ b/plugins/askrene/test/Makefile
@@ -6,15 +6,13 @@ PLUGIN_ASKRENE_TEST_PROGRAMS := $(PLUGIN_ASKRENE_TEST_OBJS:.o=)
 
 ALL_C_SOURCES += $(PLUGIN_ASKRENE_TEST_SRC)
 ALL_TEST_PROGRAMS += $(PLUGIN_ASKRENE_TEST_PROGRAMS)
-$(PLUGIN_RENEPAY_TEST_OBJS): $(PLUGIN_ASKRENE_SRC)
-
-PLUGIN_ASKRENE_TEST_COMMON_OBJS :=
+$(PLUGIN_RENEPAY_TEST_OBJS): $(PLUGIN_ASKRENE_SRC) plugins/askrene/test/Makefile
 
 plugins/askrene/test/run-bfs plugins/askrene/test/run-dijkstra plugins/askrene/test/run-flow plugins/askrene/test/run-mcf plugins/askrene/test/run-mcf-large: \
 	plugins/askrene/priorityqueue.o \
 	plugins/askrene/graph.o
 
-$(PLUGIN_ASKRENE_TEST_PROGRAMS): $(PLUGIN_ASKRENE_TEST_COMMON_OBJS) $(PLUGIN_LIB_OBJS) $(PLUGIN_COMMON_OBJS) $(JSMN_OBJS) $(CCAN_OBJS)
+$(PLUGIN_ASKRENE_TEST_PROGRAMS): $(PLUGIN_LIB_OBJS) libcommon.a
 
 check-askrene: $(PLUGIN_ASKRENE_TEST_PROGRAMS:%=unittest/%)
 
