--- a/tools/test/Makefile
+++ b/tools/test/Makefile
@@ -22,16 +22,11 @@ TOOL_TEST_PROGRAMS := $(TOOL_TEST_OBJS:.o=)
 ALL_C_SOURCES += $(TOOL_GEN_SRC) $(TOOL_TEST_SRC)
 ALL_C_HEADERS += $(TOOL_GEN_HEADER)
 
-TOOL_TEST_COMMON_OBJS :=		\
-	common/utils.o			\
-	wire/fromwire.o			\
-	wire/towire.o
-
 TOOLS_WIRE_DEPS := $(BOLT_DEPS) tools/test/test_cases $(wildcard tools/gen/*_template)
 
 tools/test/enum.o: ccan/config.h
-$(TOOL_TEST_OBJS) $(TOOL_GEN_OBJS): $(TOOL_GEN_HEADER)
-$(TOOL_TEST_PROGRAMS): $(TOOL_TEST_COMMON_OBJS) $(TOOL_GEN_OBJS) tools/test/enum.o
+$(TOOL_TEST_OBJS) $(TOOL_GEN_OBJS): $(TOOL_GEN_HEADER) tools/test/Makefile
+$(TOOL_TEST_PROGRAMS): $(TOOL_GEN_OBJS) tools/test/enum.o libcommon.a
 
 tools/test/test_gen.h: $(TOOLS_WIRE_DEPS) tools/test/Makefile
 	$(BOLT_GEN) --page header $@ test_type < tools/test/test_cases > $@
