Makefiles: remove redundant dependencies, and have objects depend on their Makefile.
1. $(JSMN_OBJS) is not set anywhere.
2. You don't need to depend on CCAN_HEADERS, COMMON_HEADERS or JSMN_HEADERS: the top level Makefile has all object depedning on it.
3. Similarly, CCAN_OBJS.
4. Every object file should be rebuilt if its Makefile changes.

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/cli/Makefile
+++ b/cli/Makefile
@@ -5,8 +5,8 @@ ALL_C_SOURCES += $(LIGHTNING_CLI_SRC)
 ALL_C_HEADERS +=
 ALL_PROGRAMS += cli/lightning-cli
 
-$(LIGHTNING_CLI_OBJS): $(JSMN_HEADERS) $(COMMON_HEADERS) $(CCAN_HEADERS)
+$(LIGHTNING_CLI_OBJS): cli/Makefile
 
-cli/lightning-cli: $(LIGHTNING_CLI_OBJS) $(JSMN_OBJS) libcommon.a libccan.a
+cli/lightning-cli: $(LIGHTNING_CLI_OBJS) libcommon.a
 
 include cli/test/Makefile
