--- a/plugins/askrene/Makefile
+++ b/plugins/askrene/Makefile
@@ -26,11 +26,11 @@ PLUGIN_ASKRENE_HEADER := \
 
 PLUGIN_ASKRENE_OBJS := $(PLUGIN_ASKRENE_SRC:.c=.o)
 
-$(PLUGIN_ASKRENE_OBJS): $(PLUGIN_ASKRENE_HEADER)
+$(PLUGIN_ASKRENE_OBJS): $(PLUGIN_ASKRENE_HEADER) plugins/askrene/Makefile
 
 PLUGIN_ALL_SRC += $(PLUGIN_ASKRENE_SRC)
 PLUGIN_ALL_HEADER += $(PLUGIN_ASKRENE_HEADER)
 
-plugins/cln-askrene: $(PLUGIN_ASKRENE_OBJS) $(PLUGIN_LIB_OBJS) $(JSMN_OBJS) $(CCAN_OBJS) libcommon.a
+plugins/cln-askrene: $(PLUGIN_ASKRENE_OBJS) $(PLUGIN_LIB_OBJS) libcommon.a
 
 include plugins/askrene/test/Makefile
