--- a/plugins/xpay/Makefile
+++ b/plugins/xpay/Makefile
@@ -9,7 +9,7 @@ PLUGIN_XPAY_OBJS := $(PLUGIN_XPAY_SRC:.c=.o)
 ALL_C_SOURCES += $(PLUGIN_XPAY_SRC)
 ALL_C_HEADERS += $(PLUGIN_XPAY_HDRS)
 
-# Make all plugins depend on all plugin headers, for simplicity.
-$(PLUGIN_XPAY_OBJS): $(PLUGIN_XPAY_HDRS)
+# Make all plugins depend on all plugin headers, for simplicity (and this file)
+$(PLUGIN_XPAY_OBJS): $(PLUGIN_XPAY_HDRS) plugins/xpay/Makefile
 
-plugins/cln-xpay: $(PLUGIN_XPAY_OBJS) $(PLUGIN_LIB_OBJS) $(JSMN_OBJS) $(CCAN_OBJS) libcommon.a
+plugins/cln-xpay: $(PLUGIN_XPAY_OBJS) $(PLUGIN_LIB_OBJS) libcommon.a
