common/jsonrpc_io: helper routines for reading JSON from sockets.
The efficient way to do this is to use membuf, which handles the buffer
control (only using memmove when necessary).  We have multiple places
where we opencoded this, some of which did not use membuf at all.

So now we create common infrastructure.  I tried making it a single
function but the various users are quite different, so instead I opted
for a toolbox approach.

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/common/Makefile
+++ b/common/Makefile
@@ -62,6 +62,7 @@ COMMON_SRC_NOGEN :=				\
 	common/json_parse.c			\
 	common/json_parse_simple.c		\
 	common/json_stream.c			\
+	common/jsonrpc_io.c			\
 	common/key_derive.c			\
 	common/keyset.c				\
 	common/lease_rates.c			\
